# mclub

./: .gitignore  pyproject.toml  pytest.ini  rsa_keys.sh
src/: main.py
src/api/: auth.py  health_check.py  routers.py
src/api_v1/: __init__.py  exceptions.py  routers.py
src/api_v1/auth/: dependencies.py  schemas.py  services.py  utils.py  views.py
src/api_v1/auth/repositories/: session.py  user.py
src/api_v1/email/: schemas.py  services.py
src/api_v1/email/templates/: verification-code.html
src/api_v1/exceptions/: api_exceptions.py
src/api_v1/health_check/: schemas.py  views.py
src/core/: .env.example  .test.env  config.py  db.py
src/core/redis/: redis_helper.py
src/dependencies/: auth.py  user.py
src/exceptions/: api_exceptions.py
src/migrations/: env.py
src/migrations/versions/: 2024_11_27_1845-843219a936e3_add_users_table.py  2024_11_27_1917-bf4a8d7aeb7e_firstname_lastname_first_name_last_name.py  2024_12_02_1948-54ca1d4179cd_add_roles_table.py  2024_12_03_2008-26efd106535b_add_session_table.py  2024_12_03_2306-640da571186b_delete_table_role.py  2024_12_04_1153-30e07333ad3d_session_table_id_int_id_str.py
src/models/: __init__.py  base.py  roles.py  session.py  user.py
src/models/mixins/: user_relation.py
src/repositories/: session.py  user.py
src/schemas/: auth.py
src/services/: auth.py  email.py  session.py  user.py
src/static/email_templates/: verification-code.html
src/utils/: auth.py
tests/: test_auth.py  test_health_check.py
