[tool.poetry]
name = "mclub"
version = "0.1.0"
description = ""
authors = ["digitalband"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pytest = "^8.3.3"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
black = "^24.10.0"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
