[tool.poetry]
name = "mclub"
version = "0.1.0"
description = ""
authors = ["digitalband"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlalchemy = {extras = ["async"], version = "^2.0.36"}
alembic = "^1.14.0"
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
bcrypt = "^4.2.1"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
pydantic = {extras = ["email"], version = "^2.10.1"}
pydantic-extra-types = "^2.10.0"
phonenumbers = "^8.13.50"
asyncpg = "^0.30.0"
aiofiles = "^24.1.0"
aiosmtplib = "^3.0.2"
redis = "^5.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
pytest-dotenv = "^0.5.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
